Updated the settings interface and navigation. Refactored the AudioSettings file, and organized file locations.

--- a/CatchMe/AudioSettingsViewController.xib
+++ b/CatchMe/AudioSettingsViewController.xib
@@ -46,12 +46,11 @@
 						<int key="NSvFlags">290</int>
 						<string key="NSFrameSize">{320, 44}</string>
 						<reference key="NSSuperview" ref="412055555"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="727060808"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIBarStyle">1</int>
-						<array key="IBUIItems">
+						<array class="NSMutableArray" key="IBUIItems">
 							<object class="IBUINavigationItem" id="838778331">
 								<reference key="IBUINavigationBar" ref="218826125"/>
 								<string key="IBUITitle">Audio Message Settings</string>
@@ -74,7 +73,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{20, 316}, {134, 51}}</string>
 						<reference key="NSSuperview" ref="412055555"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="440762366"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -110,7 +108,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{162, 316}, {138, 52}}</string>
 						<reference key="NSSuperview" ref="412055555"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="221301872"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -133,7 +130,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{20, 384}, {134, 51}}</string>
 						<reference key="NSSuperview" ref="412055555"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="433530102"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -156,8 +152,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{162, 384}, {138, 51}}</string>
 						<reference key="NSSuperview" ref="412055555"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -179,7 +173,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{20, 238}, {285, 90}}</string>
 						<reference key="NSSuperview" ref="412055555"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="118970371"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -212,7 +205,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{206, 81}, {94, 27}}</string>
 						<reference key="NSSuperview" ref="412055555"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="225194043"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -226,7 +218,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{26, 68}, {206, 53}}</string>
 						<reference key="NSSuperview" ref="412055555"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="630597100"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -256,7 +247,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{18, 229}, {284, 23}}</string>
 						<reference key="NSSuperview" ref="412055555"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="694893100"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -270,7 +260,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{20, 200}, {149, 21}}</string>
 						<reference key="NSSuperview" ref="412055555"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="300621781"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -292,7 +281,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{26, 135}, {150, 44}}</string>
 						<reference key="NSSuperview" ref="412055555"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="943417518"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -314,7 +302,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{221, 142}, {79, 37}}</string>
 						<reference key="NSSuperview" ref="412055555"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="405654383"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -335,7 +322,6 @@
 				</array>
 				<string key="NSFrameSize">{320, 460}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -435,8 +421,8 @@
 							<reference ref="433530102"/>
 							<reference ref="221301872"/>
 							<reference ref="440762366"/>
-							<reference ref="118970371"/>
 							<reference ref="218826125"/>
+							<reference ref="118970371"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -447,19 +433,6 @@
 							<reference ref="838778331"/>
 						</array>
 						<reference key="parent" ref="412055555"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">7</int>
-						<reference key="object" ref="838778331"/>
-						<array class="NSMutableArray" key="children">
-							<reference ref="314841396"/>
-						</array>
-						<reference key="parent" ref="218826125"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">26</int>
-						<reference key="object" ref="314841396"/>
-						<reference key="parent" ref="838778331"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">9</int>
@@ -516,10 +489,23 @@
 						<reference key="object" ref="943417518"/>
 						<reference key="parent" ref="412055555"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">7</int>
+						<reference key="object" ref="838778331"/>
+						<array class="NSMutableArray" key="children">
+							<reference ref="314841396"/>
+						</array>
+						<reference key="parent" ref="218826125"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">26</int>
+						<reference key="object" ref="314841396"/>
+						<reference key="parent" ref="838778331"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
-				<string key="-1.CustomClassName">AudioSettings</string>
+				<string key="-1.CustomClassName">AudioSettingsViewController</string>
 				<string key="-1.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="-2.CustomClassName">UIResponder</string>
 				<string key="-2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -548,88 +534,9 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">46</int>
+			<int key="maxID">48</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">AudioSettings</string>
-					<string key="superclassName">UIViewController</string>
-					<dictionary class="NSMutableDictionary" key="actions">
-						<string key="goBack">id</string>
-						<string key="playSound">id</string>
-						<string key="playSound:">id</string>
-						<string key="recordSound">id</string>
-						<string key="recordSound:">id</string>
-						<string key="saveSound">id</string>
-						<string key="stopSound">id</string>
-						<string key="stopSound:">id</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="actionInfosByName">
-						<object class="IBActionInfo" key="goBack">
-							<string key="name">goBack</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="playSound">
-							<string key="name">playSound</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="playSound:">
-							<string key="name">playSound:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="recordSound">
-							<string key="name">recordSound</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="recordSound:">
-							<string key="name">recordSound:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="saveSound">
-							<string key="name">saveSound</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="stopSound">
-							<string key="name">stopSound</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="stopSound:">
-							<string key="name">stopSound:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="playButton">UIButton</string>
-						<string key="recordButton">UIButton</string>
-						<string key="saveButton">UIButton</string>
-						<string key="stopButton">UIButton</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="playButton">
-							<string key="name">playButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="recordButton">
-							<string key="name">recordButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="saveButton">
-							<string key="name">saveButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="stopButton">
-							<string key="name">stopButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/AudioSettings.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
